# ml-mini-01-tabular

./: .gitignore  Dockerfile  Dockerfile.mini03  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/mini03-ui/: package-lock.json  package.json
apps/mini03-ui/app/: page.tsx
src/mini01/: baseline.py  evaluate.py  inspect_data.py
src/mini02/: api.py  baseline.py  evaluate.py  features.py  schemas.py
src/mini03/: analyze.py  api.py  cluster.py  data.py  evaluate.py  features.py  inspect_data.py  train.py
tests/: test_api_smoke.py  test_baseline_smoke.py  test_baseline_smoke_2.py  test_evaluate.py  test_mini03_api_unit.py  test_mini03_smoke.py
