[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-mini-01-tabular"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "scikit-learn",
  "mlflow",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
